cmake_minimum_required(VERSION 3.6)
project(tongxingpoints)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories (src)
find_package(Boost REQUIRED)

set(SOURCE_FILES
    autom4te.cache/output.0
    autom4te.cache/output.1
    autom4te.cache/requests
    autom4te.cache/traces.0
    autom4te.cache/traces.1
    contrib/bitrpc/bitrpc.py
    contrib/bitrpc/README.md
    contrib/debian/examples/bitcoin.conf
    contrib/debian/manpages/bitcoin-qt.1
    contrib/debian/manpages/bitcoin.conf.5
    contrib/debian/manpages/bitcoind.1
    contrib/debian/patches/README
    contrib/debian/patches/series
    contrib/debian/source/format
    contrib/debian/bitcoin-qt.desktop
    contrib/debian/bitcoin-qt.install
    contrib/debian/bitcoin-qt.lintian-overrides
    contrib/debian/bitcoin-qt.protocol
    contrib/debian/bitcoind.bash-completion
    contrib/debian/bitcoind.examples
    contrib/debian/bitcoind.install
    contrib/debian/bitcoind.lintian-overrides
    contrib/debian/bitcoind.manpages
    contrib/debian/changelog
    contrib/debian/compat
    contrib/debian/control
    contrib/debian/copyright
    contrib/debian/gbp.conf
    contrib/debian/README.md
    contrib/debian/rules
    contrib/debian/watch
    contrib/devtools/fix-copyright-headers.py
    contrib/devtools/github-merge.sh
    contrib/devtools/README.md
    contrib/devtools/symbol-check.py
    contrib/devtools/update-translations.py
    contrib/gitian-descriptors/boost-linux.yml
    contrib/gitian-descriptors/boost-win.yml
    contrib/gitian-descriptors/deps-linux.yml
    contrib/gitian-descriptors/deps-win.yml
    contrib/gitian-descriptors/gitian-linux.yml
    contrib/gitian-descriptors/gitian-osx-bitcoin.yml
    contrib/gitian-descriptors/gitian-osx-depends.yml
    contrib/gitian-descriptors/gitian-osx-native.yml
    contrib/gitian-descriptors/gitian-osx-qt.yml
    contrib/gitian-descriptors/gitian-win.yml
    contrib/gitian-descriptors/protobuf-win.yml
    contrib/gitian-descriptors/qt-linux.yml
    contrib/gitian-descriptors/qt-win.yml
    contrib/gitian-descriptors/README.md
    contrib/gitian-downloader/aschildbach-key.pgp
    contrib/gitian-downloader/bluematt-key.pgp
    contrib/gitian-downloader/devrandom-key.pgp
    contrib/gitian-downloader/gavinandresen-key.pgp
    contrib/gitian-downloader/laanwj-key.pgp
    contrib/gitian-downloader/linux-download-config
    contrib/gitian-downloader/luke-jr-key.pgp
    contrib/gitian-downloader/michagogo-key.pgp
    contrib/gitian-downloader/sipa-key.pgp
    contrib/gitian-downloader/tcatm-key.pgp
    contrib/gitian-downloader/win32-download-config
    contrib/gitian-downloader/wtogami-key.pgp
    contrib/linearize/example-linearize.cfg
    contrib/linearize/linearize.py
    contrib/linearize/README.md
    contrib/macdeploy/background.png
    contrib/macdeploy/background.psd
    contrib/macdeploy/DS_Store
    contrib/macdeploy/fancy.plist
    contrib/macdeploy/LICENSE
    contrib/macdeploy/macdeployqtplus
    contrib/macdeploy/README.md
    contrib/pyminer/example-config.cfg
    contrib/pyminer/pyminer.py
    contrib/pyminer/README.md
    contrib/qos/README.md
    contrib/qos/tc.sh
    contrib/seeds/makeseeds.py
    contrib/seeds/README.md
    contrib/spendfrom/README.md
    contrib/spendfrom/setup.py
    contrib/spendfrom/spendfrom.py
    contrib/test-patches/README.md
    contrib/testgen/base58.py
    contrib/testgen/gen_base58_test_vectors.py
    contrib/testgen/README.md
    contrib/verifysfbinaries/README.md
    contrib/verifysfbinaries/verify.sh
    contrib/bitcoin-qt.pro
    contrib/bitcoind.bash-completion
    contrib/qt_translations.py
    contrib/README.md
    contrib/tidy_datadir.sh
    doc/assets-attribution.md
    doc/bootstrap.md
    doc/build-msw.md
    doc/build-unix.md
    doc/coding.md
    doc/Doxyfile
    doc/gitian-building.md
    doc/README.md
    doc/release-notes.md
    doc/release-process.md
    doc/tor.md
    doc/unit-tests.md
    linux_shell/32-libleveldb.a
    linux_shell/32-libmemenv.a
    linux_shell/autogen-tongxingpoints-man.sh
    linux_shell/build-unix.md
    linux_shell/libleveldb.a
    linux_shell/libmemenv.a
    linux_shell/linux.sh
    qa/pull-tester/build-tests.sh
    qa/pull-tester/build-tests.sh.in
    qa/pull-tester/pull-tester.py
    qa/pull-tester/pull-tester.sh
    qa/pull-tester/run-bitcoind-for-test.sh
    qa/pull-tester/run-bitcoind-for-test.sh.in
    qa/rpc-tests/python-bitcoinrpc/bitcoinrpc/__init__.py
    qa/rpc-tests/python-bitcoinrpc/bitcoinrpc/authproxy.py
    qa/rpc-tests/python-bitcoinrpc/setup.py
    qa/rpc-tests/conflictedbalance.sh
    qa/rpc-tests/listtransactions.py
    qa/rpc-tests/README.md
    qa/rpc-tests/send.sh
    qa/rpc-tests/skeleton.py
    qa/rpc-tests/txnmall.sh
    qa/rpc-tests/util.py
    qa/rpc-tests/util.sh
    qa/rpc-tests/wallet.sh
    qa/rpc-tests/walletbackup.sh
    share/certs/BitcoinFoundation_Apple_Cert.pem
    share/certs/BitcoinFoundation_Comodo_Cert.pem
    share/certs/PrivateKeyNotes.md
    share/pixmaps/addressbook16.bmp
    share/pixmaps/addressbook16mask.bmp
    share/pixmaps/addressbook20.bmp
    share/pixmaps/addressbook20mask.bmp
    share/pixmaps/bitcoin-bc.ico
    share/pixmaps/bitcoin.ico
    share/pixmaps/bitcoin128.png
    share/pixmaps/bitcoin128.xpm
    share/pixmaps/bitcoin16.png
    share/pixmaps/bitcoin16.xpm
    share/pixmaps/bitcoin256.png
    share/pixmaps/bitcoin256.xpm
    share/pixmaps/bitcoin32.png
    share/pixmaps/bitcoin32.xpm
    share/pixmaps/bitcoin64.png
    share/pixmaps/bitcoin64.xpm
    share/pixmaps/check.ico
    share/pixmaps/favicon.ico
    share/pixmaps/nsis-header.bmp
    share/pixmaps/nsis-wizard.bmp
    share/pixmaps/send16.bmp
    share/pixmaps/send16mask.bmp
    share/pixmaps/send16masknoshadow.bmp
    share/pixmaps/send20.bmp
    share/pixmaps/send20mask.bmp
    share/qt/img/reload.png
    share/qt/img/reload.xcf
    share/qt/extract_strings_qt.py
    share/qt/Info.plist
    share/qt/Info.plist.in
    share/qt/make_spinner.py
    share/qt/make_windows_icon.sh
    share/qt/protobuf.pri
    share/genbuild.sh
    share/setup.nsi
    share/setup.nsi.in
    share/ui.rc
    src/build-aux/compile
    src/build-aux/config.guess
    src/build-aux/config.sub
    src/build-aux/depcomp
    src/build-aux/install-sh
    src/build-aux/missing
    src/build-aux/test-driver
    src/compat/byteswap.h
    src/compat/compat.h
    src/compat/endian.h
    src/compat/glibc_compat.cpp
    src/compat/glibcxx_compat.cpp
    src/crypto/common.h
    src/json/json_spirit.h
    src/json/json_spirit_error_position.h
    src/json/json_spirit_reader.cpp
    src/json/json_spirit_reader.h
    src/json/json_spirit_reader.o
    src/json/json_spirit_reader_template.h
    src/json/json_spirit_stream_reader.h
    src/json/json_spirit_utils.h
    src/json/json_spirit_value.cpp
    src/json/json_spirit_value.h
    src/json/json_spirit_value.o
    src/json/json_spirit_writer.cpp
    src/json/json_spirit_writer.h
    src/json/json_spirit_writer.o
    src/json/json_spirit_writer_template.h
    src/json/LICENSE.txt
    src/leveldb/db/autocompact_test.cc
    src/leveldb/db/builder.cc
    src/leveldb/db/builder.h
    src/leveldb/db/builder.o
    src/leveldb/db/c.cc
    src/leveldb/db/c.o
    src/leveldb/db/c_test.c
    src/leveldb/db/corruption_test.cc
    src/leveldb/db/db_bench.cc
    src/leveldb/db/db_impl.cc
    src/leveldb/db/db_impl.h
    src/leveldb/db/db_impl.o
    src/leveldb/db/db_iter.cc
    src/leveldb/db/db_iter.h
    src/leveldb/db/db_iter.o
    src/leveldb/db/db_test.cc
    src/leveldb/db/dbformat.cc
    src/leveldb/db/dbformat.h
    src/leveldb/db/dbformat.o
    src/leveldb/db/dbformat_test.cc
    src/leveldb/db/dumpfile.cc
    src/leveldb/db/dumpfile.o
    src/leveldb/db/filename.cc
    src/leveldb/db/filename.h
    src/leveldb/db/filename.o
    src/leveldb/db/filename_test.cc
    src/leveldb/db/leveldb_main.cc
    src/leveldb/db/log_format.h
    src/leveldb/db/log_reader.cc
    src/leveldb/db/log_reader.h
    src/leveldb/db/log_reader.o
    src/leveldb/db/log_test.cc
    src/leveldb/db/log_writer.cc
    src/leveldb/db/log_writer.h
    src/leveldb/db/log_writer.o
    src/leveldb/db/memtable.cc
    src/leveldb/db/memtable.h
    src/leveldb/db/memtable.o
    src/leveldb/db/repair.cc
    src/leveldb/db/repair.o
    src/leveldb/db/skiplist.h
    src/leveldb/db/skiplist_test.cc
    src/leveldb/db/snapshot.h
    src/leveldb/db/table_cache.cc
    src/leveldb/db/table_cache.h
    src/leveldb/db/table_cache.o
    src/leveldb/db/version_edit.cc
    src/leveldb/db/version_edit.h
    src/leveldb/db/version_edit.o
    src/leveldb/db/version_edit_test.cc
    src/leveldb/db/version_set.cc
    src/leveldb/db/version_set.h
    src/leveldb/db/version_set.o
    src/leveldb/db/version_set_test.cc
    src/leveldb/db/write_batch.cc
    src/leveldb/db/write_batch.o
    src/leveldb/db/write_batch_internal.h
    src/leveldb/db/write_batch_test.cc
    src/leveldb/helpers/memenv/memenv.cc
    src/leveldb/helpers/memenv/memenv.h
    src/leveldb/helpers/memenv/memenv.o
    src/leveldb/helpers/memenv/memenv_test.cc
    src/leveldb/include/leveldb/c.h
    src/leveldb/include/leveldb/cache.h
    src/leveldb/include/leveldb/comparator.h
    src/leveldb/include/leveldb/db.h
    src/leveldb/include/leveldb/env.h
    src/leveldb/include/leveldb/filter_policy.h
    src/leveldb/include/leveldb/iterator.h
    src/leveldb/include/leveldb/options.h
    src/leveldb/include/leveldb/slice.h
    src/leveldb/include/leveldb/status.h
    src/leveldb/include/leveldb/table.h
    src/leveldb/include/leveldb/table_builder.h
    src/leveldb/include/leveldb/write_batch.h
    src/leveldb/issues/issue178_test.cc
    src/leveldb/issues/issue200_test.cc
    src/leveldb/port/win/stdint.h
    src/leveldb/port/atomic_pointer.h
    src/leveldb/port/port.h
    src/leveldb/port/port_example.h
    src/leveldb/port/port_posix.cc
    src/leveldb/port/port_posix.h
    src/leveldb/port/port_posix.o
    src/leveldb/port/port_win.cc
    src/leveldb/port/port_win.h
    src/leveldb/port/README
    src/leveldb/port/thread_annotations.h
    src/leveldb/table/block.cc
    src/leveldb/table/block.h
    src/leveldb/table/block.o
    src/leveldb/table/block_builder.cc
    src/leveldb/table/block_builder.h
    src/leveldb/table/block_builder.o
    src/leveldb/table/filter_block.cc
    src/leveldb/table/filter_block.h
    src/leveldb/table/filter_block.o
    src/leveldb/table/filter_block_test.cc
    src/leveldb/table/format.cc
    src/leveldb/table/format.h
    src/leveldb/table/format.o
    src/leveldb/table/iterator.cc
    src/leveldb/table/iterator.o
    src/leveldb/table/iterator_wrapper.h
    src/leveldb/table/merger.cc
    src/leveldb/table/merger.h
    src/leveldb/table/merger.o
    src/leveldb/table/table.cc
    src/leveldb/table/table.o
    src/leveldb/table/table_builder.cc
    src/leveldb/table/table_builder.o
    src/leveldb/table/table_test.cc
    src/leveldb/table/two_level_iterator.cc
    src/leveldb/table/two_level_iterator.h
    src/leveldb/table/two_level_iterator.o
    src/leveldb/util/arena.cc
    src/leveldb/util/arena.h
    src/leveldb/util/arena.o
    src/leveldb/util/arena_test.cc
    src/leveldb/util/bloom.cc
    src/leveldb/util/bloom.o
    src/leveldb/util/bloom_test.cc
    src/leveldb/util/cache.cc
    src/leveldb/util/cache.o
    src/leveldb/util/cache_test.cc
    src/leveldb/util/coding.cc
    src/leveldb/util/coding.h
    src/leveldb/util/coding.o
    src/leveldb/util/coding_test.cc
    src/leveldb/util/comparator.cc
    src/leveldb/util/comparator.o
    src/leveldb/util/crc32c.cc
    src/leveldb/util/crc32c.h
    src/leveldb/util/crc32c.o
    src/leveldb/util/crc32c_test.cc
    src/leveldb/util/env.cc
    src/leveldb/util/env.o
    src/leveldb/util/env_posix.cc
    src/leveldb/util/env_posix.o
    src/leveldb/util/env_test.cc
    src/leveldb/util/env_win.cc
    src/leveldb/util/env_win.o
    src/leveldb/util/filter_policy.cc
    src/leveldb/util/filter_policy.o
    src/leveldb/util/hash.cc
    src/leveldb/util/hash.h
    src/leveldb/util/hash.o
    src/leveldb/util/hash_test.cc
    src/leveldb/util/histogram.cc
    src/leveldb/util/histogram.h
    src/leveldb/util/histogram.o
    src/leveldb/util/logging.cc
    src/leveldb/util/logging.h
    src/leveldb/util/logging.o
    src/leveldb/util/mutexlock.h
    src/leveldb/util/options.cc
    src/leveldb/util/options.o
    src/leveldb/util/posix_logger.h
    src/leveldb/util/random.h
    src/leveldb/util/status.cc
    src/leveldb/util/status.o
    src/leveldb/util/testharness.cc
    src/leveldb/util/testharness.h
    src/leveldb/util/testutil.cc
    src/leveldb/util/testutil.h
    src/leveldb/AUTHORS
    src/leveldb/build_config.mk
    src/leveldb/build_detect_platform
    src/leveldb/libleveldb.a
    src/leveldb/libleveldb.so.1.18
    src/leveldb/libmemenv.a
    src/leveldb/LICENSE
    src/leveldb/Makefile
    src/leveldb/NEWS
    src/leveldb/README
    src/leveldb/TODO
    src/leveldb/WINDOWS.md
    src/m4/ax_boost_base.m4
    src/m4/ax_boost_chrono.m4
    src/m4/ax_boost_filesystem.m4
    src/m4/ax_boost_program_options.m4
    src/m4/ax_boost_system.m4
    src/m4/ax_boost_thread.m4
    src/m4/ax_boost_unit_test_framework.m4
    src/m4/ax_check_compile_flag.m4
    src/m4/ax_check_link_flag.m4
    src/m4/ax_check_preproc_flag.m4
    src/m4/ax_pthread.m4
    src/m4/bitcoin_qt.m4
    src/m4/bitcoin_subdir_to_include.m4
    src/m4/dacrs_find_bdb48.m4
    src/obj/build.h
    src/ptest/a.txt
    src/ptest/CAnony_tests.cpp
    src/ptest/CAnony_tests.h
    src/ptest/CBlackHalo_tests.cpp
    src/ptest/CBlackHalo_tests.h
    src/ptest/CGuarantee_tests.cpp
    src/ptest/CGuarantee_tests.h
    src/ptest/CIpo_tests.cpp
    src/ptest/CIpo_tests.h
    src/ptest/CreateMinterKey_tests.cpp
    src/ptest/CreateMinterKey_tests.h
    src/ptest/CreateTx_tests.cpp
    src/ptest/CreateTx_tests.h
    src/ptest/CRedPacket_tests.cpp
    src/ptest/CRedPacket_tests.h
    src/ptest/CRegist_tests.cpp
    src/ptest/CycleP2PBet_tests.cpp
    src/ptest/CycleP2PBet_tests.h
    src/ptest/CycleSesureTrade_tests.cpp
    src/ptest/CycleSesureTrade_tests.h
    src/ptest/CycleTestBase.cpp
    src/ptest/CycleTestBase.h
    src/ptest/CycleTestManger.cpp
    src/ptest/CycleTestManger.h
    src/ptest/ipo1_ret
    src/ptest/ipo_ret
    src/ptest/Main_tests.cpp
    src/ptest/Makefile
    src/ptest/Makefile.am
    src/ptest/Makefile.in
    src/ptest/Miner_tests.cpp
    src/ptest/Mining_tests.cpp
    src/ptest/P_test.cpp
    src/ptest/tongxingpoints_ptest
    src/ptest/tongxingpoints_ptest-CAnony_tests.o
    src/ptest/tongxingpoints_ptest-CBlackHalo_tests.o
    src/ptest/tongxingpoints_ptest-CGuarantee_tests.o
    src/ptest/tongxingpoints_ptest-CIpo_tests.o
    src/ptest/tongxingpoints_ptest-CreateMinterKey_tests.o
    src/ptest/tongxingpoints_ptest-CreateTx_tests.o
    src/ptest/tongxingpoints_ptest-CRedPacket_tests.o
    src/ptest/tongxingpoints_ptest-CycleP2PBet_tests.o
    src/ptest/tongxingpoints_ptest-CycleSesureTrade_tests.o
    src/ptest/tongxingpoints_ptest-CycleTestBase.o
    src/ptest/tongxingpoints_ptest-CycleTestManger.o
    src/ptest/tongxingpoints_ptest-Main_tests.o
    src/ptest/tongxingpoints_ptest-Mining_tests.o
    src/ptest/tongxingpoints_ptest-P_test.o
    src/ptest/tongxingpoints_ptest-UpdateAccount_tests.o
    src/ptest/UpdateAccount_tests.cpp
    src/rpc/rpcblockchain.cpp
    src/rpc/rpcblockchain.o
    src/rpc/rpcclient.cpp
    src/rpc/rpcclient.h
    src/rpc/rpcclient.o
    src/rpc/rpcdump.cpp
    src/rpc/rpcdump.o
    src/rpc/rpcmining.cpp
    src/rpc/rpcmining.o
    src/rpc/rpcmisc.cpp
    src/rpc/rpcmisc.o
    src/rpc/rpcnet.cpp
    src/rpc/rpcnet.o
    src/rpc/rpcprotocol.cpp
    src/rpc/rpcprotocol.h
    src/rpc/rpcprotocol.o
    src/rpc/rpcrawtransaction.cpp
    src/rpc/rpcrawtransaction.o
    src/rpc/rpcserver.cpp
    src/rpc/rpcserver.h
    src/rpc/rpcserver.o
    src/rpc/rpctx.cpp
    src/rpc/rpctx.h
    src/rpc/rpctx.o
    src/rpc/rpcwallet.cpp
    src/rpc/rpcwallet.o
    src/support/cleanse.cpp
    src/support/cleanse.h
    src/support/cleanse.o
    src/test/data/alertTests.raw
    src/test/data/alertTests.raw.h
    src/test/data/anony.bin
    src/test/data/base58_encode_decode.json
    src/test/data/base58_encode_decode.json.h
    src/test/data/base58_keys_invalid.json
    src/test/data/base58_keys_invalid.json.h
    src/test/data/base58_keys_valid.json
    src/test/data/base58_keys_valid.json.h
    src/test/data/darksecure.bin
    src/test/data/IpoApp.bin
    src/test/data/lottery.bin
    src/test/data/p2pbet.bin
    src/test/data/README.md
    src/test/data/RegScriptTest.bin
    src/test/data/script_invalid.json
    src/test/data/script_invalid.json.h
    src/test/data/script_valid.json
    src/test/data/script_valid.json.h
    src/test/data/scripttest.bin
    src/test/data/SecuredTrade.bin
    src/test/data/sig_canonical.json
    src/test/data/sig_canonical.json.h
    src/test/data/sig_noncanonical.json
    src/test/data/sig_noncanonical.json.h
    src/test/data/sighash.json
    src/test/data/sighash.json.h
    src/test/data/test.bin
    src/test/data/tx_invalid.json
    src/test/data/tx_invalid.json.h
    src/test/data/tx_valid.json
    src/test/data/tx_valid.json.h
    src/test/data/txtest.bin
    src/test/data/unit_test.bin
    src/test/data/wallet.dat
    src/test/dataIPO/IpoApp_1.bin
    src/test/dataIPO/IpoApp_10.bin
    src/test/dataIPO/IpoApp_2.bin
    src/test/dataIPO/IpoApp_20.bin
    src/test/dataIPO/IpoApp_3.bin
    src/test/dataIPO/IpoApp_30.bin
    src/test/dataIPO/IpoApp_4.bin
    src/test/dataIPO/IpoApp_5.bin
    src/test/dataIPO/IpoApp_6.bin
    src/test/account_tests.cpp
    src/test/accountview_tests.cpp
    src/test/allocator_tests.cpp
    src/test/appacc_test.cpp
    src/test/base32_tests.cpp
    src/test/base58_tests.cpp
    src/test/base64_tests.cpp
    src/test/betroll_test.cpp
    src/test/bignum_tests.cpp
    src/test/bloom_tests.cpp
    src/test/canonical_tests.cpp
    src/test/chainparams_tests.cpp
    src/test/checkblock_tests.cpp
    src/test/Checkpoints_tests.cpp
    src/test/DoS_tests.cpp
    src/test/key_tests.cpp
    src/test/main_tests.cpp
    src/test/Makefile
    src/test/Makefile.am
    src/test/Makefile.in
    src/test/mruset_tests.cpp
    src/test/multisig_tests.cpp
    src/test/netbase_tests.cpp
    src/test/pressure_tests.cpp
    src/test/scriptdb_tests.cpp
    src/test/scriptdbex_tests.cpp
    src/test/serialize_tests.cpp
    src/test/sighash_tests.cpp
    src/test/sigopcount_tests.cpp
    src/test/system_test.cpp
    src/test/systemacct_test.cpp
    src/test/systestbase.cpp
    src/test/systestbase.h
    src/test/systestscript.cpp
    src/test/test_tongxingpoints.cpp
    src/test/tongxingpoints_ptest-systestbase.o
    src/test/tongxingpoints_test
    src/test/tongxingpoints_test-account_tests.o
    src/test/tongxingpoints_test-accountview_tests.o
    src/test/tongxingpoints_test-allocator_tests.o
    src/test/tongxingpoints_test-appacc_test.o
    src/test/tongxingpoints_test-base32_tests.o
    src/test/tongxingpoints_test-base58_tests.o
    src/test/tongxingpoints_test-base64_tests.o
    src/test/tongxingpoints_test-betroll_test.o
    src/test/tongxingpoints_test-bignum_tests.o
    src/test/tongxingpoints_test-bloom_tests.o
    src/test/tongxingpoints_test-canonical_tests.o
    src/test/tongxingpoints_test-chainparams_tests.o
    src/test/tongxingpoints_test-checkblock_tests.o
    src/test/tongxingpoints_test-Checkpoints_tests.o
    src/test/tongxingpoints_test-DoS_tests.o
    src/test/tongxingpoints_test-key_tests.o
    src/test/tongxingpoints_test-main_tests.o
    src/test/tongxingpoints_test-mruset_tests.o
    src/test/tongxingpoints_test-multisig_tests.o
    src/test/tongxingpoints_test-netbase_tests.o
    src/test/tongxingpoints_test-pressure_tests.o
    src/test/tongxingpoints_test-scriptdb_tests.o
    src/test/tongxingpoints_test-scriptdbex_tests.o
    src/test/tongxingpoints_test-serialize_tests.o
    src/test/tongxingpoints_test-sighash_tests.o
    src/test/tongxingpoints_test-sigopcount_tests.o
    src/test/tongxingpoints_test-system_test.o
    src/test/tongxingpoints_test-systemacct_test.o
    src/test/tongxingpoints_test-systestbase.o
    src/test/tongxingpoints_test-systestscript.o
    src/test/tongxingpoints_test-test_tongxingpoints.o
    src/test/tongxingpoints_test-uint256_tests.o
    src/test/tongxingpoints_test-util_tests.o
    src/test/tongxingpoints_test-vm8051_test.o
    src/test/uint256_tests.cpp
    src/test/util_tests.cpp
    src/test/vm8051_test.cpp
    src/vm/appaccount.cpp
    src/vm/appaccount.h
    src/vm/appaccount.o
    src/vm/script.cpp
    src/vm/script.h
    src/vm/script.o
    src/vm/testmcu.cpp
    src/vm/testmcu.h
    src/vm/testmcu.o
    src/vm/vm8051.cpp
    src/vm/vm8051.h
    src/vm/vm8051.o
    src/vm/vmrunevn.cpp
    src/vm/vmrunevn.h
    src/vm/vmrunevn.o
    src/wallet/db.cpp
    src/wallet/db.h
    src/wallet/db.o
    src/wallet/wallet.cpp
    src/wallet/wallet.h
    src/wallet/wallet.o
    src/wallet/walletdb.cpp
    src/wallet/walletdb.h
    src/wallet/walletdb.o
    src/addrman.cpp
    src/addrman.h
    src/addrman.o
    src/alert.cpp
    src/alert.h
    src/alert.o
    src/allocators.cpp
    src/allocators.h
    src/allocators.o
    src/arith_uint256.cpp
    src/arith_uint256.h
    src/arith_uint256.o
    src/base58.cpp
    src/base58.h
    src/base58.o
    src/bignum.h
    src/bloom.cpp
    src/bloom.h
    src/bloom.o
    src/chainparams.cpp
    src/chainparams.h
    src/chainparams.o
    src/checkpoints.cpp
    src/checkpoints.h
    src/checkpoints.o
    src/checkqueue.h
    src/clientversion.h
    src/core.cpp
    src/core.h
    src/core.o
    src/crypter.cpp
    src/crypter.h
    src/crypter.o
    src/cuiserver.cpp
    src/cuiserver.h
    src/cuiserver.o
    src/database.cpp
    src/database.h
    src/database.o
    src/hash.cpp
    src/hash.h
    src/hash.o
    src/init.cpp
    src/init.h
    src/init.o
    src/key.cpp
    src/key.h
    src/key.o
    src/keystore.cpp
    src/keystore.h
    src/keystore.o
    src/leveldbwrapper.cpp
    src/leveldbwrapper.h
    src/leveldbwrapper.o
    src/libtongxingpoints_cli.a
    src/libtongxingpoints_common.a
    src/libtongxingpoints_server.a
    src/libtongxingpoints_wallet.a
    src/limitedmap.h
    src/main.cpp
    src/main.h
    src/main.o
    src/Makefile
    src/Makefile.am
    src/Makefile.in
    src/Makefile.include
    src/makeOneFile.sh
    src/miner.cpp
    src/miner.h
    src/miner.o
    src/mruset.h
    src/net.cpp
    src/net.h
    src/net.o
    src/netbase.cpp
    src/netbase.h
    src/netbase.o
    src/noui.cpp
    src/noui.h
    src/noui.o
    src/protocol.cpp
    src/protocol.h
    src/protocol.o
    src/random.cpp
    src/random.h
    src/random.o
    src/serialize.h
    src/stamp-h1
    src/sync.cpp
    src/sync.h
    src/sync.o
    src/syncdata.cpp
    src/syncdata.h
    src/syncdata.o
    src/syncdatadb.cpp
    src/syncdatadb.h
    src/syncdatadb.o
    src/threadsafety.h
    src/tinyformat.h
    src/tongxingpoints-cli.cpp
    src/tongxingpoints-config.h
    src/tongxingpoints-config.h.in
    src/tongxingpointsd
    src/tongxingpointsd-res.rc
    src/tongxingpointsd.cpp
    src/tongxingpointsd.o
    src/tx.cpp
    src/tx.h
    src/tx.o
    src/txdb.cpp
    src/txdb.h
    src/txdb.o
    src/txmempool.cpp
    src/txmempool.h
    src/txmempool.o
    src/ui_interface.h
    src/uint256.cpp
    src/uint256.h
    src/uint256.o
    src/util.cpp
    src/util.h
    src/util.o
    src/version.cpp
    src/version.h
    src/version.o
    windowshell/autogen-tongxingpoints-man.sh
    windowshell/libleveldb.a
    windowshell/libmemenv.a
    windowshell/start.bat
    aclocal.m4
    autogen-tongxingpoints-man.sh
    autogen.sh
    autotest.bat
    config.log
    config.status
    configure
    configure.ac
    COPYING
    INSTALL
    Makefile
    Makefile.am
    Makefile.in
    modify-polo-to-tongxing
    pkg.m4
    README.md
    tongxingpointdoc2
    tongxingpointsDOC)

add_executable(tongxingpoints ${SOURCE_FILES})